tests/compile_fail/003_copy_source_not_buffer.vox
a number called "n" is 1.
a buffer called "dst" is 16 bytes in size.
copy n to dst.
